# Sistema-de-Gest-o-de-Materiais-Did-ticos

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: admin.py  filters.py  models.py  serializers.py  views.py
api/management/commands/: seed.py
api/migrations/: 0001_initial.py  0002_alter_disciplina_created_by_and_more.py  0002_alter_enviomaterial_ano_referencia.py  0003_alter_enviomaterial_id_status.py  0004_alter_enviomaterial_ano_referencia.py  0005_alter_enviomaterial_unique_together.py  0006_rename_id_perfil_perfil_id.py  0007_rename_id_usuario_usuario_id.py  0008_rename_id_etapa_etapaescolar_id.py  0009_rename_id_disciplina_disciplina_id.py  0010_rename_id_status_statusenvio_id.py  0011_rename_id_envio_enviomaterial_id.py
api/templates/: home.html
api/view/: home.py
config/: settings.py  urls.py
